--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
   <!-- App CSS -->
   <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
   <link rel="stylesheet" href="/styles/nav.css" type="text/css">
+  <link rel="stylesheet" href="/styles/header.css" type="text/css">
 
   <!-- External JS -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -44,7 +45,7 @@
     </div>
     <br>
     <div>
-      <h2>Your Name</h2>
+      <h2 class="username">Your Name</h2>
     </div>
   </header>
 
