--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
     </div>
     <br>
     <div>
-      <h2 class="username">Your Name</h2>
+      <h2 class="username">Your <span>Name</span></h2>
     </div>
   </header>
 
