add placeholder content in main div, add styling to .container class

--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,14 @@
   </header>
 
   <!-- Page-specific (main) content here -->
-  <main class="container"></main>
+  <main class="container">
+    <button>hello</button>
+    <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam id distinctio voluptatem, sint commodi
+      porro, perspiciatis, animi tempora architecto corrupti consequuntur rem. Ipsam iure quia exercitationem.
+      Voluptates nulla reiciendis cumque!</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci officia explicabo odio unde corporis modi
+      porro saepe repudiandae rem doloremque dolores pariatur id, tempora rerum eius quas facere, itaque incidunt?</p>
+  </main>
 </body>
 
 </html>
