--- a/public/index.html
+++ b/public/index.html
@@ -41,13 +41,13 @@
     </div>
   </nav>
 
-  <header>
+  <header class="user-info">
     <div>
       <img src="/images/profile-hex.png">
     </div>
     <br>
     <div>
-      <h2 class="username">Your <span>Name</span></h2>
+      <h2>Your <span>Name</span></h2>
     </div>
   </header>
 
@@ -64,6 +64,28 @@
         </div>
       </form>
     </section>
+
+    <article class="tweet">
+      <header>
+        <div>
+          <img src="" alt="img here">
+          <span>username</span>
+        </div>
+        <span>@username</span>
+      </header>
+      <section>
+        <p>Tweet information goes here</p>
+      </section>
+      <footer>
+        <span>10 days ago</span>
+        <div>
+          <i class="fas fa-flag"></i>
+          <i class="fas fa-retweet"></i>
+          <i class="fas fa-heart"></i>
+        </div>
+      </footer>
+    </article>
+
   </main>
 </body>
 
