add styling for tweets, clean up unneeded css in all stylesheets

--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,7 @@
     type="text/css" />
   <!-- Google font -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+Pro:wght@300;600&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+Pro:ital,wght@0,300;0,600;1,300;1,600&display=swap" rel="stylesheet">
   <!-- Font awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     referrerpolicy="no-referrer" />
@@ -21,6 +20,7 @@
   <link rel="stylesheet" href="/styles/nav.css" type="text/css">
   <link rel="stylesheet" href="/styles/header.css" type="text/css">
   <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css">
+  <link rel="stylesheet" href="/styles/tweet.css" type="text/css">
 
   <!-- External JS -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -68,10 +68,10 @@
     <article class="tweet">
       <header>
         <div>
-          <img src="" alt="img here">
-          <span>username</span>
+          <img id="profile-pic" src="https://i.imgur.com/73hZDYK.png" alt="img here">
+          <span class="username">Newton</span>
         </div>
-        <span>@username</span>
+        <span class="tweeter-handle">@SirIssac</span>
       </header>
       <section>
         <p>Tweet information goes here</p>
@@ -79,9 +79,9 @@
       <footer>
         <span>10 days ago</span>
         <div>
-          <i class="fas fa-flag"></i>
-          <i class="fas fa-retweet"></i>
-          <i class="fas fa-heart"></i>
+          <button class="btn-icon"><i class="fas fa-flag"></i></button>
+          <button class="btn-icon"><i class="fas fa-retweet"></i></button>
+          <button class="btn-icon"><i class="fas fa-heart"></i></button>
         </div>
       </footer>
     </article>
