increase tweet container borders by 1px

--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@
         <span class="tweeter-handle">@SirIssac</span>
       </header>
       <section>
-        <p>Tweet information goes here</p>
+        <p>If I have seen further it is by standing on the shoulders of giants</p>
       </section>
       <footer>
         <span id="tweetTime"></span>
