--- a/public/index.html
+++ b/public/index.html
@@ -85,6 +85,27 @@
       </footer>
     </article>
 
+    <article class="tweet">
+      <header>
+        <div>
+          <img id="profile-pic" src="https://i.imgur.com/73hZDYK.png" alt="img here">
+          <span class="username">Newton</span>
+        </div>
+        <span class="tweeter-handle">@SirIssac</span>
+      </header>
+      <section>
+        <p>If I have seen further it is by standing on the shoulders of giants</p>
+      </section>
+      <footer>
+        <span id="tweetTime"></span>
+        <div>
+          <button class="btn-icon"><i class="fas fa-flag"></i></button>
+          <button class="btn-icon"><i class="fas fa-retweet"></i></button>
+          <button class="btn-icon"><i class="fas fa-heart"></i></button>
+        </div>
+      </footer>
+    </article>
+
   </main>
 </body>
 
