refactor stylesheets for increased rule specificity, update html to have more consistent naming convention

--- a/public/index.html
+++ b/public/index.html
@@ -76,7 +76,7 @@
         <p>If I have seen further it is by standing on the shoulders of giants</p>
       </section>
       <footer>
-        <span id="tweetTime"></span>
+        <span class="tweetTime"></span>
         <div>
           <button class="btn-icon"><i class="fas fa-flag"></i></button>
           <button class="btn-icon"><i class="fas fa-retweet"></i></button>
@@ -97,7 +97,7 @@
         <p>If I have seen further it is by standing on the shoulders of giants</p>
       </section>
       <footer>
-        <span id="tweetTime"></span>
+        <span class="tweet-time"></span>
         <div>
           <button class="btn-icon"><i class="fas fa-flag"></i></button>
           <button class="btn-icon"><i class="fas fa-retweet"></i></button>
