--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
     </div>
   </nav>
 
-  <header class="user-info">
+  <header class="site-header">
     <div>
       <img src="/images/profile-hex.png">
     </div>
@@ -67,7 +67,7 @@
     <article class="tweet">
       <header>
         <div>
-          <img id="profile-pic" src="https://i.imgur.com/73hZDYK.png" alt="img here">
+          <img id="profile-img" src="https://i.imgur.com/73hZDYK.png" alt="img here">
           <span class="username">Newton</span>
         </div>
         <span class="tweeter-handle">@SirIssac</span>
@@ -76,7 +76,7 @@
         <p>If I have seen further it is by standing on the shoulders of giants</p>
       </section>
       <footer>
-        <span class="tweetTime"></span>
+        <span class="tweet-time"></span>
         <div>
           <button class="btn-icon"><i class="fas fa-flag"></i></button>
           <button class="btn-icon"><i class="fas fa-retweet"></i></button>
@@ -88,7 +88,7 @@
     <article class="tweet">
       <header>
         <div>
-          <img id="profile-pic" src="https://i.imgur.com/73hZDYK.png" alt="img here">
+          <img id="profile-img" src="https://i.imgur.com/73hZDYK.png" alt="img here">
           <span class="username">Newton</span>
         </div>
         <span class="tweeter-handle">@SirIssac</span>
