remove unneeded placeholder content

--- a/public/index.html
+++ b/public/index.html
@@ -64,48 +64,7 @@
       </form>
     </section>
 
-    <article class="tweet">
-      <header>
-        <div>
-          <img id="profile-img" src="https://i.imgur.com/73hZDYK.png" alt="img here">
-          <span class="username">Newton</span>
-        </div>
-        <span class="tweeter-handle">@SirIssac</span>
-      </header>
-      <section>
-        <p>If I have seen further it is by standing on the shoulders of giants</p>
-      </section>
-      <footer>
-        <span class="tweet-time"></span>
-        <div>
-          <button class="btn-icon"><i class="fas fa-flag"></i></button>
-          <button class="btn-icon"><i class="fas fa-retweet"></i></button>
-          <button class="btn-icon"><i class="fas fa-heart"></i></button>
-        </div>
-      </footer>
-    </article>
-
-    <article class="tweet">
-      <header>
-        <div>
-          <img id="profile-img" src="https://i.imgur.com/73hZDYK.png" alt="img here">
-          <span class="username">Newton</span>
-        </div>
-        <span class="tweeter-handle">@SirIssac</span>
-      </header>
-      <section>
-        <p>If I have seen further it is by standing on the shoulders of giants</p>
-      </section>
-      <footer>
-        <span class="tweet-time"></span>
-        <div>
-          <button class="btn-icon"><i class="fas fa-flag"></i></button>
-          <button class="btn-icon"><i class="fas fa-retweet"></i></button>
-          <button class="btn-icon"><i class="fas fa-heart"></i></button>
-        </div>
-      </footer>
-    </article>
-
+    <section id="tweet-container"></section>
   </main>
 </body>
 
