--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
   <main class="container">
     <section class="new-tweet">
       <h2>Compose Tweet</h2>
-      <span id="error-message">Error</span>
+      <span id="error-message"></span>
       <form method="POST" action="/tweets/">
         <label for="tweet-text">What are you humming about?</label>
         <textarea name="text" id="tweet-text"></textarea>
