add css rules to toggle-button

--- a/public/index.html
+++ b/public/index.html
@@ -64,8 +64,8 @@
         </div>
       </form>
     </section>
-
     <section id="tweet-container"></section>
+    <i id="toggle-btn" class="fas fa-angle-double-up"></i>
   </main>
 </body>
 
