add logic to show hide, and jump to the top of the page when button is clicked

--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
   <!-- Top nav bar (fixed) -->
   <nav>
     <span>tweeter</span>
-    <div>
+    <div id="compose-container">
       <span><strong>Write</strong> a new tweet</span>
       <i id="compose-tweet" class="fas fa-angle-double-down icon"></i>
     </div>
